컴포턴트 수정

--- a/resources/assets/common-components.html
+++ b/resources/assets/common-components.html
@@ -28,7 +28,7 @@
                 <table>
                     <tbody>
                         <tr>
-                            <td>사이즈별/컬러별</td>
+                            <td>BUTTON</td>
                         </tr>
                         <tr>
                             <td>
