--- a/resources/assets/GEPS-WEB-BIV-CU01.html
+++ b/resources/assets/GEPS-WEB-BIV-CU01.html
@@ -9,62 +9,85 @@
 </head>
 
 <body>
-    <header>
-        <div class="top">
-            <div class="container d_flex jcfe aic">
-                <div class="user_wrap">
-                    <div class="user_info">
-                        <span class="ico user">user</span>
-                        <span class="input_val under_line">관리자</span>
-                        <span>님 (접속 : <span>2023-07-07 15:19:02</span>)</span>
+    <div class="wrap">
+        <header>
+            <div class="top">
+                <div class="container d-flex jcfe aic">
+                    <div class="user-wrap">
+                        <div class="user-info">
+                            <span class="ico user">user</span>
+                            <span class="input-val under-line">관리자</span>
+                            <span>님 (접속 : <span>2023-07-07 15:19:02</span>)</span>
+                        </div>
+                        <div class="timer">
+                            <span class="ico clock">clock</span>
+                            <span class="input-val">00:29:49</span>
+                        </div>
+                        <button type="button" class="btn btn-outline-gray">로그아웃</button>
                     </div>
-                    <div class="timer">
-                        <span class="ico clock">clock</span>
-                        <span class="input_val">00:29:49</span>
-                    </div>
-                    <button type="button" class="btn btn-outline-gray">로그아웃</button>
                 </div>
             </div>
-        </div>
-        <div class="bottom">
-            <div class="container d_flex jcsb aic">
-                <span class="ico logo">공무원연금공단</span>
-                <ul class="nav_wrap">
-                    <li class="active">신상조사</li>
-                    <li>생체정보 등록현황</li>
-                    <li>VC 발급현황</li>
-                    <li>통계조회</li>
-                    <li>통계조회</li>
-                    <li>시스템 관리</li>
-                    <li><span class="ico menu">토글</span></li>
-                </ul>
-            </div>
-        </div>
-    </head>
-    <div class="content">
-        <div class="search_wrapper">
-            <div class="container">
-                <div class="search_wrap">
-                    <div class="legend">신상조사 실시현황</div>
-                    <ul class="bread_crumb">
-                        <li><span class="ico home">home</span></li>
-                        <li><span class="ico arrow">arrow</span></li>
-                        <li>신상조사</li>
-                        <li><span class="ico arrow">arrow</span></li>
-                        <li>신상조사 실시현황</li>
+            <div class="bottom">
+                <div class="container d-flex jcsb aic">
+                    <span class="ico logo">공무원연금공단</span>
+                    <ul class="nav-wrap">
+                        <li class="active">신상조사</li>
+                        <li>생체정보 등록현황</li>
+                        <li>VC 발급현황</li>
+                        <li>통계조회</li>
+                        <li>통계조회</li>
+                        <li>시스템 관리</li>
+                        <li><span class="ico menu">토글</span></li>
                     </ul>
                 </div>
-                <form action="POST" class="bg_white">
-                    <div class="options"></div>
-                    <hr>
-                    <div class="btn_wrap">
-                        <button type="button" class="btn btn-md btn-gray"><span class="ico reset">reset</span>초기화</button>
-                        <button type="button" class="btn btn-md btn-primary">검색</button>
-                    </div>
-                </form>
             </div>
+        </head>
+        <div class="content">
+            <div class="search-wrapper">
+                <div class="container">
+                    <div class="search-wrap">
+                        <div class="legend">신상조사 실시현황</div>
+                        <ul class="bread-crumb">
+                            <li><span class="ico home">home</span></li>
+                            <li><span class="ico arrow">arrow</span></li>
+                            <li>신상조사</li>
+                            <li><span class="ico arrow">arrow</span></li>
+                            <li>신상조사 실시현황</li>
+                        </ul>
+                    </div>
+                    <form action="POST" class="bg-white">
+                        <div class="options">
+                            <div class="input-warpper">
+                                <div class="input-warp">
+                                    <label for="">라벨</label>
+                                    <input type="text" placeholder="내용수정하세요">
+                                </div>
+                                <div class="input-warp">
+                                    <label for="">라벨</label>
+                                    <input type="text" placeholder="내용수정하세요">
+                                </div>
+                            </div>
+                            <div class="input-warpper">
+                                <div class="input-warp">
+                                    <label for="">라벨</label>
+                                    <input type="text" placeholder="내용수정하세요">
+                                </div>
+                                <div class="input-warp">
+                                    <label for="">라벨</label>
+                                    <input type="text" placeholder="내용수정하세요">
+                                </div>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="btn-wrap">
+                            <button type="button" class="btn btn-md btn-gray"><span class="ico reset">reset</span>초기화</button>
+                            <button type="button" class="btn btn-md btn-primary">검색</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="list-wrap"></div>
         </div>
-        <div class="list_wrap"></div>
     </div>
 
     <script src="js/jquery.min.js"></script>
