--- a/resources/assets/GEPS-WEB-HOM-MA01.html
+++ b/resources/assets/GEPS-WEB-HOM-MA01.html
@@ -125,7 +125,81 @@
         </header>
 
         <div class="content bg-gray">
-            dd
+            <div class="container">
+                <div class="main-cont">
+                    <section class="row">
+                        <div class="col-8">
+                            <h1 class="title">2023년 6월 현황<span>(마지막 업데이트 : 2023.06.09 00:00:00)</span></h2>
+                                <div class="card-wrap">
+                                    <div class="row">
+                                        <div class="col-6">
+                                            <div class="card card-sm dark shadow">
+                                                <h3 class="title">연금증 발급자 수</h3>
+                                                <ul class="item-group">
+                                                    <li>
+                                                        <div class="item-wrap">
+                                                            <h5>재직자</h5>
+                                                            <div class="item-area dark">
+                                                                <h3><span>33</span>건</h3>
+                                                                <dl>
+                                                                    <dt>전월대비</dt>
+                                                                    <dd class="down"><i class="i i-trg-down"></i></dd>
+                                                                </dl>
+                                                            </div>
+                                                        </div>
+                                                    </li>
+                                                    <li>
+                                                        <div class="item-wrap">
+                                                            <h5>재직자</h5>
+                                                            <div class="item-area dark">
+                                                                <h3><span>33</span>건</h3>
+                                                                <dl>
+                                                                    <dt>전월대비</dt>
+                                                                    <dd class="up"><i class="i i-trg-up"></i>11</dd>
+                                                                </dl>
+                                                            </div>
+                                                        </div>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                        <div class="col-3">
+                                            <div class="card card-sm shadow">
+                                                <h3 class="title">생체정보 등록</h3>
+                                                <div class="item-wrap pt-4">
+                                                    <div class="item-area">
+                                                        <h3><span>153</span>건</h3>
+                                                        <dl>
+                                                            <dt>전월대비</dt>
+                                                            <dd class="up"><i class="i i-trg-up"></i>11</dd>
+                                                        </dl>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-3">
+                                            <div class="card card-sm shadow">
+                                                <h3 class="title">신규가입자</h3>
+                                                <div class="item-wrap pt-4">
+                                                    <div class="item-area">
+                                                        <h3><span>100</span>건</h3>
+                                                        <dl>
+                                                            <dt>전월대비</dt>
+                                                            <dd class="down"><i class="i i-trg-down"></i>6</dd>
+                                                        </dl>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                        </div>
+                        <div class="col-4">
+                            <h1 class="title">최근신상조사 현황</h2>
+                        </div>
+                    </section>
+                </div>
+            </div>
         </div>
     </div>
 
