--- a/resources/assets/GEPS-WEB-HOM-MA01.html
+++ b/resources/assets/GEPS-WEB-HOM-MA01.html
@@ -195,7 +195,100 @@
                                 </div>
                         </div>
                         <div class="col-4">
-                            <h1 class="title">최근신상조사 현황</h2>
+                            <h1 class="title">최근신상조사 현황</h1>
+                            <div class="card-wrap">
+                                <div class="row">
+                                    <div class="col-6">
+                                        <div class="card card-sm shadow">
+                                            <h3 class="title">생체정보 등록</h3>
+                                            <div class="item-wrap pt-4">
+                                                <div class="item-area">
+                                                    <h3><span>53</span>건</h3>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="card card-sm shadow">
+                                            <h3 class="title">신규가입자</h3>
+                                            <div class="item-wrap pt-4">
+                                                <div class="item-area">
+                                                    <h3><span>50</span>건</h3>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <section class="card card-md card-b shadow">
+                        <div class="card-top">
+                            <h2 class="title">연금증 발급자 수</h2>
+                            <ul class="chart-legend">
+                                <li><span class="blue"></span>재직자</li>
+                                <li><span class="orange"></span>수급자</li>
+                            </ul>
+                        </div>
+
+                        <!-- 차트 영역 -->
+                        <div class="chart-wrap" style="background: #f1f1f1; height: 226px;"></div>
+                    </section>
+                    <section class="row row-wrap">
+                        <div class="col-6">
+                            <div class="card card-md card-b shadow">
+                                <div class="card-top">
+                                    <h2 class="title">공지사항 관리</h2>
+                                    <a href="#" class="btn-more">더보기</a>
+                                </div>
+                                <div class="main-notice">
+                                    <ul>
+                                        <li>
+                                            <span><서울개포, 16차>공무원임대주택 선착순 모집예정 안내</span><b>2023-07-19</b>
+                                        </li>
+                                        <li>
+                                            <span>2023년 8월말 퇴직예정자 온라인 설명회 이벤트 당첨자 발표</span><b>2023-07-19</b>
+                                        </li>
+                                        <li>
+                                            <span>공무원 예술대전 수상자와 함께하는 문화 재능나눔 '원데이 클래스' 3회차 참석 대상자 발표</span><b>2023-07-19</b>
+                                        </li>
+                                        <li>
+                                            <span>2023년 3분기 연금업무 담당자 실무교육 안내</span><b>2023-07-19</b>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="card card-md card-b shadow">
+                                <div class="card-top">
+                                    <h2 class="title">앱 서비스 상태</h2>
+                                </div>
+                                <div class="main-app">
+                                    <ul>
+                                        <li>
+                                            <div class="app-wrap">
+                                                <div class="app-top">
+                                                    <i class="i i-android"></i>
+                                                    <h4>안드로이드 (12.4.2)</h4>
+                                                    <p class="green"><span></span>서비스 정상</p>
+                                                </div>
+                                                <img src="img/ok.png" alt="">
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="app-wrap">
+                                                <div class="app-top">
+                                                    <i class="i i-ios"></i>
+                                                    <h4>iOS (12.4.2)</h4>
+                                                    <p class="red"><span></span>서비스 중지</p>
+                                                </div>
+                                                <img src="img/no.png" alt="">
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                     </section>
                 </div>
